@@ -67,6 +67,7 @@
 
 #include "php.h"
 #include "ext/standard/info.h"
+#include "ext/standard/php_string.h"
 #include "ext/date/php_date.h"
 #include "php_ini.h"
 #include "php_xmlrpc.h"
@@ -844,7 +845,10 @@ PHP_FUNCTION(xmlrpc_decode)
 	}
 
 	if (return_value_used) {
-		zval* retval = decode_request_worker(arg1, arg1_len, arg2_len ? arg2 : NULL, NULL);
+		zval* retval;
+		char *trimmed = php_trim(arg1, arg1_len, NULL, 0, NULL, 1 TSRMLS_CC);
+
+		retval = decode_request_worker(trimmed, strlen(trimmed), arg2_len ? arg2 : NULL, NULL);
 		if (retval) {
 			*return_value = *retval;
 			FREE_ZVAL(retval);
